[metadata]
name = gget
version = 0.30.2
author = Laura Luebbert
author_email = lauralubbert@gmail.com
maintainer = Laura Luebbert
maintainer_email = lauralubbert@gmail.com
description = Efficient querying of genomic databases.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2
url = https://github.com/pachterlab/gget
keywords = gget
classifiers =
    Environment :: Console
    Framework :: Jupyter
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.17.2
    pandas>=1.0.0
    requests>=2.22.0
    ipython
    matplotlib
    mysql-connector-python>=8.0.32
    beautifulsoup4>=4.10.0
    ipywidgets
    tqdm
    lxml
